objects/IP_Component_from_ERP__c.object
<CustomObject>
    <description>from ERP
select *  
FROM APPS.XXGF_CN_IP_COMPONENT_V</description>
    <fields>
        <fullName>Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FV_IP_Type__c</fullName>
        <label>FV IP Type</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FV_Vendor__c</fullName>
        <label>FV Vendor</label>
        <length>240</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry_um__c</fullName>
        <description>Geometry in um format.</description>
        <formula>IF(VALUE(MID(Tech_Geo__c, 0, 3)) &gt; 0, 
    &apos;0&apos; &amp; TEXT(VALUE(MID(Tech_Geo__c, 0, 3))/1000) &amp; &apos;UM&apos;, 
   &apos;NA&apos;)</formula>
        <inlineHelpText>Geometry in um format.</inlineHelpText>
        <label>Geometry (um)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Component_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field isused as an external id for upserting IP Components from ERP. Contains combination of &apos;IP Component&apos; and &apos;Tech Type&apos;.</description>
        <externalId>true</externalId>
        <label>IP Component Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IP_Type_Desc__c</fullName>
        <label>IP Type Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <label>IP Type</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIC_IP_Component__c</fullName>
        <label>OIC IP Component</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Geometry_NM__c</fullName>
        <description>Used for short listing of IP Component in IP Declaration Form. Use to matching with Device.Process Geometry (NM) field.</description>
        <formula>IF( Tech_Geo__c != null , VALUE(LEFT(Tech_Geo__c, LEN( Tech_Geo__c )-2)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for short listing of IP Component in IP Declaration Form. Use to matching with Device.Process Geometry (NM) field.</inlineHelpText>
        <label>Process Geometry (NM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Geo__c</fullName>
        <label>Tech Geo</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Type__c</fullName>
        <label>Tech Type</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Show_5V_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show 5V Only field in IP Declaration Form</description>
        <inlineHelpText>To show 5V Only field in IP Declaration Form</inlineHelpText>
        <label>To Show 5V Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Show_Design_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to show Design ID field in IP Declaration Form</description>
        <inlineHelpText>Check to show Design ID field in IP Declaration Form</inlineHelpText>
        <label>To Show Design ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IP Component from ERP</label>
    <nameField>
        <label>IP Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Component from ERP</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>